# nycu_network_security_practice_114-2

./: .gitignore  AGENTS.md  LICENSE  LICENSE_SCOPE.md  README.md
projects/project-i-virus-scanner/: CHANGELOG.md  Makefile  README.md  demo-and-report-plan.md  product-continuation.md  pyproject.toml  requirements-traceability.md  technical-design.md
projects/project-i-virus-scanner/demo/: README.md  demo-transcript.md  run_demo.py  runbook.md
projects/project-i-virus-scanner/docs/: README.md  requirements-traceability.md  standards-alignment.md  technical-design.md
projects/project-i-virus-scanner/docs/python/: technical-design.md
projects/project-i-virus-scanner/docs/rust/: README.md
projects/project-i-virus-scanner/python/: README.md
projects/project-i-virus-scanner/python/tests/: test_scanner.py  (+4 more)
projects/project-i-virus-scanner/report/: README.md  final-report-v2.tex  final-report.tex  private-repo-handoff.md  report-draft.md  submission-checklist.md  submission-package.md
projects/project-i-virus-scanner/reports/: README.md  demo-evidence-manifest.json  demo-report.json  demo-report.md  pattern-benchmark.json  pattern-benchmark.md
projects/project-i-virus-scanner/rust/: Cargo.toml  README.md
projects/project-i-virus-scanner/scripts/: benchmark_patterns.py  check_release.py  export_private_repo.py
projects/project-i-virus-scanner/signatures/: eicar-reference-signature.json  malware-signatures.json
projects/project-i-virus-scanner/tests/: test_cli.py  test_matchers.py  test_private_export.py  test_reporting.py  test_scanner.py  test_signatures.py
(+143 files in other folders)
