[package]
name = "sentinel-v2-rust"
version = "0.4.0"
edition = "2021"
description = "Rust implementation of the Sentinel signature-based virus scanner"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
